# simPLEulator

./: .gitignore  README.md  requirements.txt
ws/.devcontainer/: Dockerfile  devcontainer.json
ws/src/ekf_localization/: CMakeLists.txt  package.xml
ws/src/ekf_localization/config/: ekf.yaml
ws/src/ekf_localization/launch/: ekf_local.launch.py
ws/src/fsd_accel_track/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ws/src/fsd_accel_track/fsd_accel_track/: accel_track_markers.py
ws/src/fsd_accel_track/launch/: accel_track.launch.py
ws/src/fsd_bringup/: package.xml  setup.cfg  setup.py
ws/src/fsd_bringup/launch/: fsd.launch.py
ws/src/fsd_vehicle_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ws/src/fsd_vehicle_sim/fsd_vehicle_sim/: bicycle_sim_node.py  lidar_sim_node.py  lidar_sim_node_chat.py
ws/src/fsd_vehicle_sim/launch/: lidar.launch.py  sim.launch.py
ws/src/localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ws/src/localization/launch/: localization.launch.py
ws/src/localization/localization/: localization.py
ws/src/perception_tracking/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ws/src/perception_tracking/launch/: perception.launch.py
ws/src/perception_tracking/perception_tracking/: perception_node.py
ws/src/trajectory_planning/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ws/src/trajectory_planning/launch/: trajectory.launch.py
ws/src/trajectory_planning/trajectory_planning/: trajectory_node.py
ws/src/vehicle_controll/vehicle_controll/: vehicle_controll_node.py
ws/src/vehicle_description/: CMakeLists.txt  package.xml
ws/src/vehicle_description/launch/: description.launch.py
ws/src/vehicle_description/urdf/: vehicle.urdf.xacro
ws/src/vehicle_msgs/: CMakeLists.txt  package.xml
ws/src/vehicle_msgs/msg/: ConeDetection.msg  ConeTracked.msg  ConeTrackedArray.msg
