<?xml version="1.0"?>
<package format="3">
    <name>fsd_accel_track</name>
    <version>0.0.1</version>
    <description>FSD Accel Track markers for RViz (ROS 2)</description>
    <maintainer email="w.bradfisch@gmx.de">Wolfi</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <export>
    <build_type>ament_python</build_type>
    </export>
</package>
