<?xml version="1.0"?>
<package format="3">
  <name>fsd_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package to launch simulation, description, localization, and track.</description>

  <maintainer email="w.bradfisch@gmx.de">Wolfi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps for included launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>fsd_vehicle_sim</exec_depend>
  <exec_depend>fsd_accel_track</exec_depend>
  <exec_depend>fsd_localization</exec_depend>
  <exec_depend>fsd_vehicle_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

