<?xml version="1.0"?>
<package format="3">
  <name>fsd_localization</name>
  <version>0.0.1</version>
  <description>Simple 2D localization </description>
  <maintainer email="w.bradfisch@gmx.de">Wolfi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
