<?xml version="1.0"?>
<package format="3">
  <name>fsd_trajectory_planning</name>
  <version>0.0.1</version>
  <description>Trajectory planning with rann Sack</description>
  <maintainer email="w.bradfisch@gmx.de">Wolfi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>vehicle_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
