<?xml version="1.0"?>
<package format="3">
  <name>fsd_vehicle_description</name>
  <version>0.0.1</version>
  <description>Vehicle URDF/Xacro and related launch/config files for FSD.</description>

  <maintainer email="w.bradfisch@gmx.de">Wolfi</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Laufzeit-Abhängigkeiten -->
  <!-- xacro: zum Expandieren der .xacro-Dateien -->
  <exec_depend>xacro</exec_depend>

  <!-- Robot State Publisher publiziert die TF-Kette aus dem URDF -->
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
